--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,9 +32,9 @@ Personas
     <h2 class="govuk-heading-s govuk-!-margin-top-6">Contents</h2>
     <ul class="govuk-list">
       
-      <li><a class="govuk-link govuk-link--no-underline govuk-!-font-size-16" href="Dominic.html"> Dominic: Prison
+      <li><a class="govuk-link govuk-link--no-underline govuk-!-font-size-16" href="Dominic"> Dominic: Prison
           leaver </a></li>
-      <li><a class="govuk-link govuk-link--no-underline govuk-!-font-size-16" href="Michelle.html"> Michelle: Gypsies
+      <li><a class="govuk-link govuk-link--no-underline govuk-!-font-size-16" href="Michelle"> Michelle: Gypsies
           and Travellers </a></li>
     </ul>
 
