--- a/app/views/index.html
+++ b/app/views/index.html
@@ -29,7 +29,7 @@ Personas
     </div>
 
 
-    <h2 class="govuk-heading-s govuk-!-margin-top-6">Contents</h2>
+    <h2 class="govuk-heading-s govuk-!-margin-top-6">Contents test</h2>
     <ul class="govuk-list">
       
       <li><a class="govuk-link govuk-link--no-underline govuk-!-font-size-16" href="Dominic"> Dominic: Prison
