--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -125,7 +125,7 @@ Emma- ready? yep, sorry hmm- no - cool
           <ul class="govuk-list govuk-list--bullet">
             <li>Dormant bank account</li>
             <li>Passport (but doesn't have access, validity unknown)</li>
-            <li>Driver's licence (but doesn't have access)</li>
+            <li>Driver's licence (but doesn't have accessk)</li>
             <li>Prison records?</li>
           </ul>
 
