--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -30,29 +30,33 @@ Dominic: Prison leaver
 
       <!--intro-->
       <div class="govuk-grid-column-one-third">
-        <p class="persona-intro govuk-!-margin-top-4">"I'm coming to the end of my second term in prison. I am adding this line Anne to see if it works! <B>please</B>b> let it work
+        <p class="persona-intro govuk-!-margin-top-4">"I'm coming to the end of my second term in prison. I am adding
+          this line Anne to see if it works! <B>please</B>b> let it work
           <br><br>It was stressful when I was released last time; I applied for Universal Credit and everything had to
           be lined up in that first
           week, and it was still ages until my money came through. It seemed like such a hassle."
-          <h>This is a new super amazing heading</h>change here 
-          
-          
+          <h>This is a new super amazing heading</h>change here
 
-          testing this with emma to see if it work and if her changes push my changes down the page or anything... if this works it's really awesome! 
 
-          Emma - I've got to go but we'll look at this next week :-) 
+
+          testing this with emma to see if it work and if her changes push my changes down the page or anything... if
+          this works it's really awesome!
+
+          Emma - I've got to go but we'll look at this next week :-)
           Anne - thank you so much! :D
-haha need to test it still - might be a mess! I get confused after this but think (hope) I've set it up ok
+          haha need to test it still - might be a mess! I get confused after this but think (hope) I've set it up ok
 
-Emma- ready? yep, sorry hmm- no - cool 
-         ok, can you see my cursor in the left hand column? 
-         <p></p>Let's add a list</p>
-         <li></li><oranges</li>
-         <li>apples</li>
-           
+          Emma- ready? yep, sorry hmm- no - cool
+          ok, can you see my cursor in the left hand column?
+        <p></p>Let's add a list</p>
+        <li></li>
+        <oranges< /li>
+          <li>apples</li>
 
-         ah, ok.. i can talk you through it on slack and you do the actions so you are more likely to remmeber,<div class=""></div>
-        </p>
+
+          ah, ok.. i can talk you through it on slack and you do the actions so you are more likely to remmeber,<div
+            class=""></div>
+          </p>
       </div>
       <!--slider-->
 
@@ -61,34 +65,36 @@ Emma- ready? yep, sorry hmm- no - cool
           <!-- <img src="{{ asset_path }}images/Dominic-summary.jpg"
             alt="Sliders showing that for Dominic, online access and ID documents are at the lower end while help and advice needs when interacting online are at the higher end of the scale and Government records includes Prison records"
             width="300" height="200"> -->
-            <img src="{{ asset_path }}images/Dom-summary.jpg"
-            alt="Sliders showing Dominic's online access and ID documents are low, help and advice needs are high while Government records include Prison records" app/assets/sass/application.scss :img { max-width: 100% 
-            }
-              
-        </p>
+          <img src="{{ asset_path }}images/Dom-summary.jpg"
+            alt="Sliders showing Dominic's online access and ID documents are low, help and advice needs are high while Government records include Prison records"
+            app/assets/sass/application.scss :img { max-width: 100% } 
+          </p>
       </div>
     </div>
-<div>
-  <ul>
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>kjjdlkslkdjkljsdlslkdkj dhahlakjsdlkajslkjaln
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>
-    <li>test</li>
-    <var> <li>test</li>
-      <li>test</li> <li>test</li> <li>test</li>
-    </var>
-    
-  </ul>
-</div>
+    <div>
+      <ul>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>kjjdlkslkdjkljsdlslkdkj dhahlakjsdlkajslkjaln
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <var>
+          <li>test</li>
+          <li>test</li>
+          <li>test</li>
+          <li>test</li>
+        </var>
+
+      </ul>
+    </div>
 
 
     <div class="govuk-grid-row">
@@ -125,7 +131,7 @@ Emma- ready? yep, sorry hmm- no - cool
           <ul class="govuk-list govuk-list--bullet">
             <li>Dormant bank account</li>
             <li>Passport (but doesn't have access, validity unknown)</li>
-            <li>Driver's licence (but doesn't have any access)</li>
+            <li>Driving licence (but doesn't have any access)</li>
             <li>Prison records?</li>
           </ul>
 
