--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -131,7 +131,7 @@ Dominic: Prison leaver
           <ul class="govuk-list govuk-list--bullet">
             <li>Dormant bank account</li>
             <li>Passport (but doesn't have access, validity unknown)</li>
-            <li>Driving licence (but doesn't have any access)</li>
+            <li>Driving icence (but doesn't have any access)</li>
             <li>Prison records?</li>
           </ul>
 
