--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -19,7 +19,7 @@ Dominic: Prison leaver
   <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
 
     <h1 class="govuk-panel__title title-colour-blue govuk-!-margin-bottom-4 govuk-!-margin-top-0">
-      Dominic: Prison leaver and disco dancer
+      Dominic: Prison leaver
     </h1>
 
     <div class="govuk-grid-row">
@@ -131,7 +131,7 @@ Dominic: Prison leaver
           <ul class="govuk-list govuk-list--bullet">
             <li>Dormant bank account</li>
             <li>Passport (but doesn't have access, validity unknown)</li>
-            <li>Driving icence (but doesn't have any access)</li>
+            <li>Driving licence (but doesn't have any access)</li>
             <li>Prison records?</li>
           </ul>
 
