--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -19,7 +19,7 @@ Dominic: Prison leaver
   <main class="govuk-main-wrapper govuk-main-wrapper--l" id="main-content" role="main">
 
     <h1 class="govuk-panel__title title-colour-blue govuk-!-margin-bottom-4 govuk-!-margin-top-0">
-      Dominic: Prison leaver
+      Dominic: Prison leaver - testing to see which branch this is!!! 
     </h1>
 
     <div class="govuk-grid-row">
@@ -50,7 +50,7 @@ Dominic: Prison leaver
           ok, can you see my cursor in the left hand column?
         <p></p>Let's add a list</p>
         <li></li>
-        <oranges< /li>
+       <li> <oranges< /li>
           <li>apples</li>
 
 
