--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -99,6 +99,29 @@ Dominic: Prison leaver
       <!--right column content-->
       <div class="govuk-grid-column-one-half">
 
+ <!--radio buttons-->
+ <div class="govuk-form-group">
+  <fieldset class="govuk-fieldset">
+    <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+      
+    </legend>
+    <div class="govuk-radios" data-module="govuk-radios">
+      <div class="govuk-radios__item">
+        <input class="govuk-radios__input" id="Status-status" name="Status-status" type="radio" value="Approved">
+        <label class="govuk-label govuk-radios__label" for="Status-status">
+          Option 1
+        </label>
+      </div>
+      
+
+      
+      </div>
+    
+    </div>
+
+  </fieldset>
+</div>
+
 
         <h2 id="contents" class="govuk-heading-m govuk-!-margin-top-4 govuk-!-margin-bottom-1 title-colour-blue">Needs
         </h2>
