--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -109,7 +109,7 @@ Dominic: Prison leaver
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="Status-status" name="Status-status" type="radio" value="Approved">
         <label class="govuk-label govuk-radios__label" for="Status-status">
-          Option 1
+          Option A
         </label>
       </div>
       
