test changes Co-authored-by: eboden1 <eboden1@users.noreply.github.com> Co-authored-by: SteveMilnes <SteveMilnes@users.noreply.github.com>

--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -86,10 +86,17 @@ Dominic: Prison leaver
         <div>
 
           <ul class="govuk-list govuk-list--bullet">
-            <li>Dormant bank account</li>
-            <li>Passport (but doesn't have access, validity unknown)</li>
-            <li>Driver's licence (but doesn't have access)</li>
+            <li>Active bank account</li>
+            <li>Pet passport (but doesn't have access, validity unknown)</li>
+            <li>Driver's licence (but does not have access)</li>
             <li>Prison records?</li>
+            <li></li><div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="Status-status" name="Status-status" type="radio" value="Approved">
+                <label class="govuk-label govuk-radios__label" for="Status-status">
+                  Option really amazing
+                </label>
+              </div></li>
           </ul>
 
         </div>
@@ -112,6 +119,14 @@ Dominic: Prison leaver
           Option A
         </label>
       </div>
+      <div class="govuk-radios" data-module="govuk-radios">
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="Status-status" name="Status-status" type="radio" value="Approved">
+          <label class="govuk-label govuk-radios__label" for="Status-status">
+            Option A
+          </label>
+        </div>
+        
       
 
       
