accessible abbr test

--- a/app/views/dominic.html
+++ b/app/views/dominic.html
@@ -22,6 +22,17 @@ Dominic: Prison leaver
       Dominic: Prison leaver
     </h1>
 
+    <p>Hi Jane
+      <br>
+    Please can you test if this     <abbr title="Cascading Style Sheets" tabindex="0">CSS</abbr> abbreviation  works with a screenreader and keyboard?
+    I've tested on a keyboard but not with a screenreader + keyboard. 
+
+<br><br>
+    thanks - anne and emma</p>
+
+   
+
+
     <div class="govuk-grid-row">
       <!--image-->
       <div class="govuk-grid-column-one-third">
